# kimi-acp-openai-bridge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
examples/: openai_client_example.py  pydantic_ai_example.py  rig_integration.rs
src/kimi_acp_bridge/: __init__.py  __main__.py  acp_client.py  config.py  models.py  server.py  translator.py
tests/: __init__.py  test_config.py  test_server.py  test_translator.py
