[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kimi-acp-bridge"
version = "0.1.0"
description = "HTTP bridge translating OpenAI-compatible API to Kimi ACP (Agent Client Protocol)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["kimi", "acp", "openai", "bridge", "api", "mcp"]
authors = [
    { name = "Your Name", email = "you@example.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "structlog>=24.4.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "respx>=0.21.0",
]

[project.scripts]
kimi-acp-bridge = "kimi_acp_bridge.__main__:main"

[project.urls]
Homepage = "https://github.com/yourname/kimi-acp-openai-bridge"
Documentation = "https://github.com/yourname/kimi-acp-openai-bridge#readme"
Repository = "https://github.com/yourname/kimi-acp-openai-bridge"
Issues = "https://github.com/yourname/kimi-acp-openai-bridge/issues"

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "W",  # pycodestyle warnings
    "I",  # isort
    "N",  # pep8-naming
    "UP", # pyupgrade
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "SIM",# flake8-simplify
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/kimi_acp_bridge"]

[tool.hatch.build.targets.wheel]
packages = ["src/kimi_acp_bridge"]
